web/components/SubstainabilityChart/SubstainabilityChart.module.scss
@import "styles/vars";
@import "styles/Charts.module.scss";

.chartHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.container {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.content {
  flex: 1;
}

.chartHeader {
  text-align: right;
}

.mobileTable {
  margin-top: 4px;
  .values {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    column-gap: 5px;
    font-size: 10px;
    & > * {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      height: 50px;
      border: $border-bold solid white;
    }
  }
}

.pcTable {
  display: flex;
  flex-direction: column;
  height: 100%;

  .header,
  .values {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
  }

  .header {
    flex-basis: 30%;
    position: relative;
    & > * {
      border: $border-thin solid white;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    & > * {
      border-right: none;
    }
    & > :first-child {
      border-left: none;
    }
    &::after {
      content: "";
      position: absolute;
      bottom: 0;
      left: -13px;
      height: $border-thin;
      width: 135%;
      background-color: white;
    }
  }

  .values {
    flex-basis: 70%;
    margin-top: 8px;
    margin-bottom: 8px;
    margin-left: 4px;
    margin-right: 4px;

    gap: 10px;

    & .cell {
      border: $border-bold solid white;
      display: flex;
      justify-content: center;
      align-items: center;
    }
  }
}

